add_executable(applepie CompProg/01-programming/applepie.cpp)
add_executable(guessds CompProg/01-programming/guessds.cpp)
add_executable(raining CompProg/01-programming/raining.cpp)
add_executable(snowflake CompProg/01-programming/snowflake.cpp)
add_executable(fences CompProg/01-programming/fences.cpp)
add_executable(parpuz CompProg/01-programming/parpuz.cpp)
add_executable(2305 CompProg/02-greedy/23o5 CompProg/02-greedy/23o5.cpp)
add_executable(casting CompProg/02-greedy/casting.cpp)
add_executable(order CompProg/02-greedy/order.cpp)
add_executable(recommend CompProg/02-greedy/recommend.cpp)
add_executable(joust CompProg/02-greedy/joust.cpp)
add_executable(farida CompProg/03-dp/farida.cpp)
add_executable(knapsack CompProg/03-dp/knapsack.cpp)
add_executable(coinchange CompProg/03-dp/coinchange.cpp)
add_executable(coinchange2 CompProg/03-dp/coinchange2.cpp)
add_executable(hedge CompProg/03-dp/hedge.cpp)
add_executable(planning CompProg/03-dp/planning.cpp)
add_executable(globbing CompProg/04-strings/globbing.cpp)
add_executable(ip-lookup CompProg/04-strings/ip-lookup.cpp)
add_executable(palindrom CompProg/04-strings/palindrom.cpp)
add_executable(perseq CompProg/04-strings/perseq.cpp)
add_executable(vladimir CompProg/04-strings/vladimir.cpp)
add_executable(level CompProg/01-livecontest/level.cpp)
add_executable(squareant CompProg/01-livecontest/squareant.cpp)
add_executable(shoal CompProg/05-graph1/shoal.cpp)
add_executable(party CompProg/05-graph1/party2.cpp)
add_executable(boxing CompProg/05-graph1/boxing.cpp)
add_executable(indiana CompProg/05-graph1/indiana-dp.cpp)
add_executable(icecream CompProg/06-graph2/icecream.cpp)
add_executable(skiing CompProg/06-graph2/skiing.cpp)
add_executable(battery CompProg/06-graph2/battery2.cpp)
add_executable(almost CompProg/06-graph2/almost.cpp)
add_executable(essential CompProg/07-graph3/essential.cpp)
add_executable(dnd CompProg/07-graph3/dnd.cpp)
