add_executable(applepie CompProg/01-programming/applepie.cpp)
add_executable(guessds CompProg/01-programming/guessds.cpp)
add_executable(raining CompProg/01-programming/raining.cpp)
add_executable(snowflake CompProg/01-programming/snowflake.cpp)
add_executable(fences CompProg/01-programming/fences.cpp)
add_executable(parpuz CompProg/01-programming/parpuz.cpp)
add_executable(2305 CompProg/02-greedy/23o5 CompProg/02-greedy/23o5.cpp)
add_executable(casting CompProg/02-greedy/casting.cpp)
add_executable(order CompProg/02-greedy/order.cpp)
add_executable(recommend CompProg/02-greedy/recommend.cpp)
add_executable(joust CompProg/02-greedy/joust.cpp)
add_executable(farida CompProg/03-dp/farida.cpp)
add_executable(knapsack CompProg/03-dp/knapsack.cpp)
add_executable(coinchange CompProg/03-dp/coinchange.cpp)
add_executable(coinchange2 CompProg/03-dp/coinchange2.cpp)
add_executable(hedge CompProg/03-dp/hedge.cpp)
add_executable(planning CompProg/03-dp/planning.cpp)
add_executable(globbing CompProg/04-strings/globbing.cpp)
add_executable(ip-lookup CompProg/04-strings/ip-lookup.cpp)
add_executable(palindrom CompProg/04-strings/palindrom.cpp)
add_executable(perseq CompProg/04-strings/perseq.cpp)
add_executable(vladimir CompProg/04-strings/vladimir.cpp)
add_executable(level CompProg/01-livecontest/level.cpp)
add_executable(squareant CompProg/01-livecontest/squareant.cpp)
add_executable(shoal CompProg/05-graph1/shoal.cpp)
add_executable(party CompProg/05-graph1/party2.cpp)
add_executable(boxing CompProg/05-graph1/boxing.cpp)
add_executable(indiana CompProg/05-graph1/indiana-dp.cpp)
add_executable(icecream CompProg/06-graph2/icecream.cpp)
add_executable(skiing CompProg/06-graph2/skiing.cpp)
add_executable(almost CompProg/06-graph2/almost.cpp)
add_executable(essential CompProg/07-graph3/essential.cpp)
add_executable(dnd CompProg/07-graph3/dnd.cpp)
add_executable(thunder CompProg/07-graph3/thunder.cpp)
add_executable(trading CompProg/07-graph3/trading.cpp)
add_executable(justflow CompProg/08-flows/justflow.cpp)
add_executable(river CompProg/08-flows/river.cpp)
add_executable(hacking3 CompProg/08-flows/hacking3.cpp)
add_executable(gifts CompProg/09-math/gifts.cpp)
add_executable(medals CompProg/09-math/medals.cpp)
add_executable(penteracts CompProg/09-math/penteracts.cpp)
add_executable(circle CompProg/10-geometry/circle.cpp)
add_executable(crossbow CompProg/10-geometry/crossbow.cpp)
add_executable(hygiene CompProg/10-geometry/hygiene.cpp)
add_executable(versailles CompProg/10-geometry/versailles.cpp)
add_executable(phoningB CompProg/11-structures/phoningb.cpp)
add_executable(bus CompProg/11-structures/bus.cpp)
add_executable(cake CompProg/11-structures/cake.cpp)
add_executable(motivation CompProg/fun-contest/motivation.cpp)
add_executable(idol CompProg/11-structures/idol.cpp)
add_executable(aqua CompProg/11-structures/chase-aqua.cpp)
